@@ -228,6 +228,8 @@ Tests
 - Patch #1529686: test_iterlen and test_email_codecs are now actually
   run by regrtest.py.
 
+- Fix the socket tests so they can be run concurrently.
+
 
 What's New in Python 2.4.3?
 ===========================
